# citizen-scripting-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Component.cpp  CppRuntime.cpp  Json.h  Runtime.cpp  Runtime.h  component.json  component.lua  deploy.sh  premake5.lua
.github/workflows/: ci_build.yml
.github/workflows/ci/: build_linux.sh
cfx/: fxScripting.h
docs/: building.md  information.md
example/: server.cpp
impl/: Metadata.inl  Statebags.inl
include/: CppComponentHost.h  CppScriptRuntime.h  IScriptHostWithManifest.h  IScriptProfiler.h  fxScripting.h
resource_sdk/: Metadata.h  Natives.h  Resource.h  SDK.h  Statebags.h
resource_sdk/Interop/: Types.h
src/: Component.cpp  CppComponentHost.cpp  CppScriptNative.h  CppScriptRuntime.cpp  CppScriptWasm.h  Json.h  Metadata.h  Resource.h  Runtime.cpp  Runtime.h  SDK.h  WASM.h
src/Impl/: Emit.inl  Metadata.inl
src/Interop/: Events.h  Process.h  Worker.h
src/Native/: Native.h
src/WASM/: Context.h  Entry.h  Exports.h  Imports.h  KVP.h  Natives.h  Process.h  Statebags.h  Timers.h  Types.h  Worker.h
tests/: server.cpp
tools/: README.md  build  deploy  deploy.sh  embed_sdk.py
tools/ci/: deploy
tools/code-gen/: build.py
tools/example/: fxmanifest.lua  server.cpp
tools/ext/: build  wasmtime
